# composite-uFJC-scission

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py  virtual-environment-install-master.sh
composite-ufjc-scission-characterization/: AFM_chain_tensile_test_curve_fit.py  chain_Helmholtz_free_energy_minimization_method_comparison.py  chain_helmholtz_free_energy_minimization_method_comparison.py  chain_mechanical_response.py  chain_network_reference_stretches.py  composite-ufjc-scission-characterization.sh  equilibrium_chain_stretch_function.py  pade2bergstrom_critical_point.py  pickle_object_creation.sh  rate_independent_chain_scission.py  rate_independent_segment_scission.py  segment_Helmholtz_free_energy_function.py  segment_helmholtz_free_energy_function.py  segment_potential_energy_function.py  segment_stretch_function.py  total_distorted_segment_potential_energy_function.py  total_segment_potential_energy_function.py
composite-ufjc-scission-characterization/AFM_chain_tensile_test_curve_fit/: al-maawali-et-al-pdms-si-o-chain-a-composite-uFJC-curve-fit-kappa_b.txt  al-maawali-et-al-pdms-si-o-chain-a-composite-uFJC-curve-fit-kappa_b_intgr_nu.txt  al-maawali-et-al-pdms-si-o-chain-a-composite-uFJC-curve-fit-kappa_nu.txt  al-maawali-et-al-pdms-si-o-chain-a-composite-uFJC-curve-fit-kappa_nu_intgr_nu.txt  al-maawali-et-al-pdms-si-o-chain-a-composite-uFJC-curve-fit-l_b_eq.txt  (+182 more)
composite-ufjc-scission-intact-chain-pdf-characterization/: intact-chain-pdf-evolution.py
composite_ufjc_scission/: __init__.py  characterizer.py  composite_ufjc.py  core.py  default_parameters.py  rate.py  rate_dependence_scission.py  scission_model.py  single_chain.py  single_chain_archive.py  utility.py
(+21 files in other folders)
