[metadata]
name = composite_ufjc_scission
version = attr: composite_ufjc_scission.__version__
url = https://github.com/jasonmulderrig/composite-uFJC-scission
author = Jason Mulderrig, Brandon Talamini, Nikolaos Bouklas
author_email = jpm445@cornell.edu, talamini1@llnl.gov, nb589@cornell.edu
maintainer = Jason Mulderrig
maintainer_email = jpm445@cornell.edu, mulderrig.jason@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
license = GNU General Public License v3 or later (GPLv3+)
license_files = 
    LICENSE
description = The Python package for the composite uFJC model with scission.
long_description = file: README.rst
keywords = ufjc, diffuse chain scission, asymptotic matching, thermodynamics, statistical mechanics, chain extensibility, polymer chain scission, distorted bond potential, dissipated energy, fracture toughness

[options]
packages = find:
python_requires = >=3.5, <4
install_requires = 
    numpy
    scipy

[options.extras_require]
plotting = matplotlib
numerical_quadrature =
  orthopy==0.8.92
  quadpy==0.16.16

[options.packages.find]
exclude = 
    composite-ufjc-scission-characterization*